[package]
name = "bevy_rapier_ggrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = true, features=["dynamic_linking"]}
bevy_editor_pls = "0.7.0" #XXX point out fucked _ vs - issue
smart-default = "0.7.1"